--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 
 # dependencies
 /node_modules
+/**/node_modules
+
 /.pnp
 .pnp.js
 
@@ -19,6 +21,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
